--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ class: grid
 </section-->
 
 <section class="section" style="margin-top: 3em; ">
-  <h2><i class="icofont-direction-sign  is-inline"></i>Neue Spielregeln ab dem Sommersemester 2024</h2>
-  {% capture content %}{% include shift-2024.html %}{% endcapture %}
+  <h2><i class="icofont-direction-sign  is-inline"></i>Welche Art von Arbeiten werden von mir betreut?</h2>
+  {% capture content %}{% include intro-works.html %}{% endcapture %}
   {{ content | markdownify }}
 </section>
 
